<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView android:id="@+id/imv_photo"
        android:layout_width="@dimen/dimen_50"
        android:layout_height="@dimen/dimen_50"
        android:src="@mipmap/ic_launcher_round"
        android:layout_margin="@dimen/dimen_20"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txv_name"
            android:layout_width="@dimen/dimen_100"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/name"
            android:textSize="9pt" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

    </LinearLayout>

</LinearLayout>